XWMM Change log

4.1.7
- Add option to scan/clean the library (Issue #100)

4.1.6
- Add header icon that was missed in a7f7ee5
- Rename field that was missed from 0ebbce8
- Allow ignore article sort with genres and sets
- Fix padding on season and episode list when there's a scrollbar
- xbmcJsonRPC converts parameters to JSON string, no need to do it before hand
- Clean up and simplify Ext.data.XBMCProxy
- Empty genre fix no longer required
- updateXBMCSet no longer required
- add missing fanart.jpg and a shiny new wacky icon.png

4.1.5
- Don't freak out when XBMC returns no results
- Rewrite movie set management feature (Issue #88)
- Rearrange directory layout (Issue #85)
- Add icons to set and watched headings (Issue #87)
- Remove unused icons
- Add missing license file
- Add license header to source files

4.1.4
- Clean up TV and Movie section
- Add missing writer field for episodes
- Allow TV shows to be sorted with the ignore article option
- Remove extra favicon.ico
- Use the same field names as XBMC
- Add missing tag field for movies
- Sort movies by sort title
- Require Gotham (XBMC 13.x) as a minimum
- No default image is better than a squished one
- Fix artwork on music section

4.1.3
- Fix performance issues on Movies by Genre view (Issue #81)
- Rewrite the Genre Management feature (Issues #45, #61)

4.1.2
- Add sort options to export to html

4.1.1
- Improve error reporting for JSON-RPC requests
- Fix 2 minor JSON-RPC errors [362bf51, 41a48a3]

4.1.0
- Clean up jshint warnings (Issue #73)
- Remove unused code (Issue #68)
- Major clean up of the TV section
- Major clean up of the Movie section
- Restore view movies by genre
- Upgrade to ExtJS v3.4.1.1
- Use light gray theme
- Add media flags from the Confluence theme (Issue #26)
- Start sharing common code (XWMM.util)
- Rewrite the HTML export feature (Issue #62)

4.0.2
- XBMC expects rating to be a number not a string. (Issue #57)
- Fix the mark (un)watched in the TV section. (Issue #58)